--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,6 +1,8 @@
 <!DOCKTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css"
+    media="all">
     <title>My First Recipe Webpage </title>
   </head>
   <body>
@@ -53,5 +55,6 @@
         </a>
         or checkout my portofolio <a href=my-bio.html> here </a>
       </h5>
+      <h6>  &copy; 2016 Farnoosh, Inc.</h6>
   </body>
 </html>
