--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -21,6 +21,8 @@
       <li>1/4 teaspoon ground black pepper</li>
       <li>6 skinless, boneless chicken breast</li>
         <em> Advertisment</em>
+	<p>Checken has a lot of health benefits, for more info click
+	<a href="chicken.html"> here </a></p> 
         <a href="http://www.target.com/p/
         simply-balanced-all-natural-boneless-skinless-chicken-
         breasts-2-lbs/-/A-15330917">
