update chicken file my-first-webpage to index.html

--- a/chicken.html
+++ b/chicken.html
@@ -33,7 +33,7 @@
       <h4> Interesting to know more?</h4>
       <h5>Please check out <a href=http://www.activebeat.com/diet-nutrition/top-10-health-benefits-of-eating-chicken/
         ><em>here<em></a>
-	<p><a href="my-first-webpage.html">Go back</a> to the recipe page
+	<p><a href="index.html">Go back</a> to the recipe page
 	</p>	
 </body>
 </html>
